--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="朱天胜的博客 - AI、产品思维与工程实践">
-    <title>博客 · Kevin Zhu</title>
+    <title>博客 · Erick Zhu</title>
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+    <link rel="apple-touch-icon" href="images/logo.svg">
 
     <!-- 字体 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,8 +37,8 @@
     <nav class="navbar scrolled" id="navbar">
         <div class="container flex-between">
             <a href="index.html" class="nav-logo">
-                <span class="logo-icon">Z</span>
-                <span>KEVIN ZHU</span>
+                <img src="images/logo.svg" alt="Erick Zhu" class="logo-icon">
+                <span>ERICK ZHU</span>
             </a>
 
             <div class="nav-links" id="navLinks">
@@ -77,8 +79,8 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <span class="nav-logo">
-                        <span class="logo-icon">Z</span>
-                        <span>KEVIN ZHU</span>
+                        <img src="images/logo.svg" alt="Erick Zhu" class="logo-icon">
+                        <span>ERICK ZHU</span>
                     </span>
                     <p class="footer-tagline">AI+FinTech Product Architect</p>
                 </div>
