--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta name="description" content="朱天胜 - 资深AI+金融科技产品经理，14年行业经验，深耕大模型应用与金融产品创新">
   <meta name="keywords" content="产品经理,AI,金融科技,LLM,Agent,智能营销">
   <title>朱天胜 · AI+FinTech Product Architect</title>
+  <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+  <link rel="apple-touch-icon" href="images/logo.svg">
 
   <!-- 字体 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,8 +42,8 @@
   <nav class="navbar" id="navbar">
     <div class="container flex-between">
       <a href="#hero" class="nav-logo">
-        <span class="logo-icon">Z</span>
-        <span>KEVIN ZHU</span>
+        <img src="images/logo.svg" alt="Erick Zhu" class="logo-icon">
+        <span>ERICK ZHU</span>
       </a>
 
       <div class="nav-links" id="navLinks">
@@ -111,7 +113,7 @@
             <path d="M10 14L21 3" />
             <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6" />
           </svg>
-          探索我的项目
+          我的项目
         </a>
         <a href="#contact" class="btn btn-secondary">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
@@ -127,6 +129,7 @@
 
     <!-- 滚动指示 — 点击跳到关于我 -->
     <a href="#about" class="hero-scroll" aria-label="向下滚动">
+      <span class="hero-scroll-text">开始探索</span>
       <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
         stroke-linecap="round" stroke-linejoin="round">
         <path d="M7 13l5 5 5-5M7 6l5 5 5-5" />
@@ -627,23 +630,29 @@
         <p class="section-subtitle">期待与您探讨 AI+金融科技的无限可能</p>
       </div>
 
-      <div class="bento-grid bento-grid-3 contact-grid">
-        <div class="contact-card reveal">
-          <div class="contact-icon">📧</div>
-          <h3 class="card-title">邮箱</h3>
-          <p class="card-description">vipbecool@qq.com</p>
+      <div class="contact-layout">
+        <!-- 左列：邮箱 + 电话 -->
+        <div class="contact-left">
+          <div class="contact-card reveal">
+            <div class="contact-icon">📧</div>
+            <h3 class="card-title">邮箱</h3>
+            <a href="mailto:vipbecool@qq.com" class="contact-link">vipbecool@qq.com</a>
+          </div>
+          <div class="contact-card reveal delay-100">
+            <div class="contact-icon">📱</div>
+            <h3 class="card-title">电话</h3>
+            <a href="tel:18662722418" class="contact-link">186-6272-2418</a>
+          </div>
         </div>
 
-        <div class="contact-card reveal delay-100">
-          <div class="contact-icon">📱</div>
-          <h3 class="card-title">电话</h3>
-          <p class="card-description">186-6272-2418</p>
-        </div>
-
-        <div class="contact-card reveal delay-200">
-          <div class="contact-icon">💼</div>
-          <h3 class="card-title">当前状态</h3>
-          <p class="card-description" style="color: var(--color-emerald);">✦ Open to Opportunities</p>
+        <!-- 右列：微信 -->
+        <div class="contact-card contact-wechat reveal delay-200">
+          <div class="contact-icon">💬</div>
+          <h3 class="card-title">微信</h3>
+          <div class="wechat-content">
+            <img src="images/wechat-qr.png" alt="微信二维码" class="wechat-qr">
+            <p class="wechat-id">微信号：vipbecool</p>
+          </div>
         </div>
       </div>
     </div>
@@ -657,8 +666,8 @@
       <div class="footer-content">
         <div class="footer-brand">
           <span class="nav-logo">
-            <span class="logo-icon">Z</span>
-            <span>KEVIN ZHU</span>
+            <img src="images/logo.svg" alt="Erick Zhu" class="logo-icon">
+            <span>ERICK ZHU</span>
           </span>
           <p class="footer-tagline">AI+FinTech Product Architect</p>
         </div>
