--- a/uses.html
+++ b/uses.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="朱天胜的工具箱 — 我日常使用的 AI、开发、设计和效率工具">
-    <title>工具箱 · Kevin Zhu</title>
+    <title>工具箱 · Erick Zhu</title>
+    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+    <link rel="apple-touch-icon" href="images/logo.svg">
 
     <!-- 字体 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,8 +37,8 @@
     <nav class="navbar" id="navbar">
         <div class="container flex-between">
             <a href="index.html" class="nav-logo">
-                <span class="logo-icon">Z</span>
-                <span>KEVIN ZHU</span>
+                <img src="images/logo.svg" alt="Erick Zhu" class="logo-icon">
+                <span>ERICK ZHU</span>
             </a>
             <div class="nav-links" id="navLinks">
                 <a href="index.html#about" class="nav-link">关于我</a>
@@ -274,8 +276,8 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <span class="nav-logo">
-                        <span class="logo-icon">Z</span>
-                        <span>KEVIN ZHU</span>
+                        <img src="images/logo.svg" alt="Erick Zhu" class="logo-icon">
+                        <span>ERICK ZHU</span>
                     </span>
                     <p class="footer-tagline">AI+FinTech Product Architect</p>
                 </div>
