--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         <!-- 联合征信 -->
         <div class="timeline-item reveal">
           <span class="timeline-date">2022.09 – 至今</span>
-          <h3 class="timeline-title">江苏省联合征信</h3>
+          <h3 class="timeline-title">江苏省联合征信有限公司</h3>
           <p class="timeline-role">征信数据产品经理（智能营销方向）</p>
           <p class="timeline-desc">负责将征信数据资产产品化，推动核心产品的 AI 重构，落地智能营销、流水分析等生成式 AI 应用。</p>
           <div class="timeline-highlights">
@@ -247,7 +247,7 @@
         <!-- 统信软件 -->
         <div class="timeline-item reveal delay-100">
           <span class="timeline-date">2021.08 – 2022.09</span>
-          <h3 class="timeline-title">统信软件技术</h3>
+          <h3 class="timeline-title">统信软件技术有限公司</h3>
           <p class="timeline-role">桌面应用产品部 · 用户产品经理</p>
           <p class="timeline-desc">负责 UOS 内置 OA 应用产品设计，改版邮箱用户增长30%，应用商店下载量翻倍。</p>
           <div class="timeline-highlights">
@@ -273,7 +273,7 @@
         <!-- 宽连十方 -->
         <div class="timeline-item reveal delay-300">
           <span class="timeline-date">2014.09 – 2016.03</span>
-          <h3 class="timeline-title">宽连十方数字技术</h3>
+          <h3 class="timeline-title">宽连十方数字技术有限公司</h3>
           <p class="timeline-role">产品创新部 · 商业化产品经理</p>
           <p class="timeline-desc">负责运营商工单平台、OA 管理平台等 SaaS 系统设计，完成中移动和博西集团等重点项目交付。</p>
           <div class="timeline-highlights">
@@ -285,7 +285,7 @@
         <!-- 春宇数字科技 -->
         <div class="timeline-item reveal delay-400">
           <span class="timeline-date">2013.03 – 2014.09</span>
-          <h3 class="timeline-title">春宇数字科技</h3>
+          <h3 class="timeline-title">春宇数字科技有限公司</h3>
           <p class="timeline-role">产品经理</p>
           <p class="timeline-desc">主导大宗商品电商系统设计，完成多个0-1产品的系统架构与上线。</p>
           <div class="timeline-highlights">
@@ -389,7 +389,38 @@
           </div>
         </div>
 
-        <!-- 项目3：AI客服 -->
+        <!-- 项目3：企空壳风险评级模型 -->
+        <div class="project-card reveal delay-150" data-project="shell-risk">
+          <div class="project-visual"
+            style="background: linear-gradient(135deg, #2c1a3e 0%, #1f0f2e 50%, #3a1c4e 100%);">
+            <div class="project-visual-content">
+              <div class="project-icon-large">🕸️</div>
+            </div>
+          </div>
+          <div class="project-body">
+            <span class="project-category">AI · 风控 · 模型</span>
+            <h3 class="project-title">企空壳风险评级模型</h3>
+            <p class="project-desc">
+              基于企业图谱与多源经营数据计算群组关联指数，动态定义空壳风险等级，实现从单体风险到网络化关联评判。
+            </p>
+            <div class="project-tags">
+              <span class="tag tag-glow">关系图谱</span>
+              <span class="tag tag-amber">评级模型</span>
+            </div>
+            <div class="project-metrics">
+              <div class="metric">
+                <span class="metric-value">↑31%</span>
+                <span class="metric-label">准确率提升</span>
+              </div>
+              <div class="metric">
+                <span class="metric-value">多源数据</span>
+                <span class="metric-label">特征融合</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 项目4：AI客服 -->
         <div class="project-card reveal delay-200" data-project="ai-cs">
           <div class="project-visual"
             style="background: linear-gradient(135deg, #1a0a2e 0%, #2d1b4e 50%, #1a1a3e 100%);">
@@ -420,7 +451,7 @@
           </div>
         </div>
 
-        <!-- 项目4："固收+"理财 -->
+        <!-- 项目5："固收+"理财 -->
         <div class="project-card reveal delay-100" data-project="fund">
           <div class="project-visual"
             style="background: linear-gradient(135deg, #1a1a0a 0%, #2e2e0f 50%, #3e3a0f 100%);">
@@ -451,7 +482,7 @@
           </div>
         </div>
 
-        <!-- 项目5：银行精选 -->
+        <!-- 项目6：银行精选 -->
         <div class="project-card col-span-2 reveal delay-200" data-project="bank">
           <div class="project-visual"
             style="background: linear-gradient(135deg, #0a1628 0%, #162d50 50%, #1a3a64 100%);">
