技能楼层更新设计

--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
 
       <!-- 简介 -->
       <p class="hero-description" style="animation: fadeInUp 0.8s ease 0.8s both;">
-        14年深耕<strong>金融科技</strong>与<strong>AI应用</strong>，兼具C端百万DAU产品操盘与B端复杂系统设计经验。<br>
-        擅长UI/UX设计与工程化实践，是PM中的<strong>极客</strong>。
+        14年深耕金融科技与AI应用落地，懂前沿技术，更懂商业闭环。<br>
+        操盘千亿级财富管理平台，主导省级征信数据的智能营销与风控重构。<br>
+        <strong>以业务目标为导向，将极客技术转化为切实可行的产品收益。</strong>
       </p>
 
       <!-- CTA -->
@@ -144,9 +145,9 @@
     <div class="container">
       <div class="section-header reveal">
         <span class="section-label">✦ About Me</span>
-        <h2 class="section-title">数据驱动的 <span class="gradient-text">全栈型产品经理</span></h2>
+        <h2 class="section-title">商业洞察定方向 × <span class="gradient-text">技术实践促落地</span></h2>
         <p class="section-subtitle">
-          不只是定义产品，更推动从概念到落地的全链路实现。用数据说话，用设计思考，用技术验证。
+          不只是定义产品，更致力于解构复杂业务、驱动团队协同，从战略构想走到最终的商业变现。
         </p>
       </div>
 
@@ -177,13 +178,12 @@
       <!-- 个人介绍（双列布局） -->
       <div class="about-content">
         <div class="about-text reveal delay-300">
-          <h3 class="about-heading">产品思维 × 技术实践 × 设计审美</h3>
+          <h3 class="about-heading">懂业务闭环 × 带团队攻坚 × 懂技术边界</h3>
           <p>
-            从苏宁电商起步，经历京东金融的千亿级财富管理平台锤炼，到如今在征信行业推动AI+数据产品创新——我始终相信，优秀的产品经理不止于画原型写PRD，更要深入理解技术可能性，亲手验证可行性。
+            在京东金融历经千亿级业务的洗礼，让我在面对复杂交易链路与极致增长需求时游刃有余；在核心系统到 ToB 征信行业的深耕，则培养了我对数据资产化、企业风控和AI大模型场景落地的深刻认知。
           </p>
           <p>
-            我是团队里那个能写 Prompt、调 Agent、编排 Workflow，甚至用 Cursor 做出 POC DEMO
-            的产品经理。在追求产品价值最大化的过程中，我享受从0到1的创造感——这个网站本身，就是我"全栈PM"理念的一个注脚。
+            对于高阶产品而言，<strong>技术是最好的武器，但业务永远是最终的目的地。</strong>大家叫我"极客PM"，是因为我能自己调Agent、编排Workflow验证可行性；但我自己清楚，这一切都是为了打破技术与业务的沟通壁垒，最快、最优雅地带领团队将商业构想转变为真实收益。
           </p>
         </div>
         <div class="about-visual reveal delay-400">
@@ -538,81 +538,114 @@
         <p class="section-subtitle">跨界整合产品、技术、设计与业务的复合能力</p>
       </div>
 
-      <div class="bento-grid bento-grid-3 skills-grid">
-        <!-- AI & LLM -->
-        <div class="bento-card card-blue reveal">
-          <div class="card-icon">🤖</div>
-          <h3 class="card-title">AI & LLM</h3>
-          <p class="card-description">Agent/RAG 架构设计、Prompt Engineering、模型微调(SFT+LoRA)、评测体系搭建、Dify/Coze 工作流编排</p>
-          <div class="skill-tags">
-            <span class="tag tag-glow btn-sm">Agent</span>
-            <span class="tag tag-glow btn-sm">RAG</span>
-            <span class="tag tag-glow btn-sm">Prompt</span>
-            <span class="tag tag-glow btn-sm">微调</span>
-          </div>
-        </div>
-
-        <!-- 数据驱动 -->
-        <div class="bento-card card-cyan reveal delay-100">
-          <div class="card-icon">📊</div>
-          <h3 class="card-title">数据驱动</h3>
-          <p class="card-description">业务指标体系搭建、用户标签与画像系统、营销转化漏斗、A/B测试、数据运营策略</p>
-          <div class="skill-tags">
-            <span class="tag tag-cyan btn-sm">指标体系</span>
-            <span class="tag tag-cyan btn-sm">画像系统</span>
-            <span class="tag tag-cyan btn-sm">A/B测试</span>
-          </div>
-        </div>
-
-        <!-- 设计能力 -->
-        <div class="bento-card card-rose reveal delay-200">
-          <div class="card-icon">🎨</div>
-          <h3 class="card-title">设计能力</h3>
-          <p class="card-description">UI/UX设计、PPT认证设计师、Figma/Sketch、产品原型设计、交互设计、设计系统搭建</p>
-          <div class="skill-tags">
-            <span class="tag tag-glow btn-sm">UI/UX</span>
-            <span class="tag tag-glow btn-sm">Figma</span>
-            <span class="tag tag-glow btn-sm">原型设计</span>
-          </div>
-        </div>
-
-        <!-- 工程实践 -->
-        <div class="bento-card card-emerald reveal delay-300">
-          <div class="card-icon">💻</div>
-          <h3 class="card-title">工程实践</h3>
-          <p class="card-description">Cursor/Vibe Coding 快速原型验证、前端开发基础、API设计与对接、技术方案评审</p>
-          <div class="skill-tags">
-            <span class="tag tag-emerald btn-sm">Cursor</span>
-            <span class="tag tag-emerald btn-sm">POC</span>
-            <span class="tag tag-emerald btn-sm">API设计</span>
-          </div>
-        </div>
-
-        <!-- 金融业务 -->
-        <div class="bento-card card-amber reveal delay-400">
-          <div class="card-icon">💰</div>
-          <h3 class="card-title">金融业务</h3>
-          <p class="card-description">信贷全周期（营销-风控-授信）、财富管理（理财/存款/基金）、征信数据产品、支付清结算</p>
-          <div class="skill-tags">
-            <span class="tag tag-amber btn-sm">信贷</span>
-            <span class="tag tag-amber btn-sm">理财</span>
-            <span class="tag tag-amber btn-sm">征信</span>
-          </div>
-        </div>
-
-        <!-- 增长运营 -->
-        <div class="bento-card card-violet reveal delay-500">
-          <div class="card-icon">📈</div>
-          <h3 class="card-title">增长运营</h3>
-          <p class="card-description">用户增长策略、精准营销体系、转化漏斗优化、营销活动设计、优惠券/权益体系</p>
-          <div class="skill-tags">
-            <span class="tag tag-glow btn-sm">增长</span>
-            <span class="tag tag-glow btn-sm">营销</span>
-            <span class="tag tag-glow btn-sm">转化</span>
-          </div>
+      <!-- Apple-Style Tab 控制器 -->
+      <div class="apple-tabs-wrapper reveal">
+        <div class="apple-tabs-container" id="skills-tabs">
+          <div class="apple-tab-indicator" id="skills-tab-indicator"></div>
+          <button class="apple-tab active" data-target="pane-domains">🎯 业务积累与商业沉淀</button>
+          <button class="apple-tab" data-target="pane-tools">🛠️ 产品基本功与技术实践</button>
         </div>
       </div>
-    </div>
+
+      <!-- Tab 面板区域 -->
+      <div class="skills-panes-wrapper">
+        <!-- 核心业务领域 (Pane 1) -->
+        <div class="skills-pane active" id="pane-domains">
+          <div class="bento-grid bento-grid-1">
+
+            <div class="bento-card card-blue reveal">
+              <div class="card-icon">⚖️</div>
+              <h3 class="card-title">企业信贷与征信风控</h3>
+              <p class="card-description">深研 B 端信贷全生命周期。通过构建千万级企业工商/税务/司法知识图谱，落地流水分析、风险评级和智能核额审批系统。</p>
+              <div class="skill-tags">
+                <span class="tag tag-glow btn-sm">风控模型</span>
+                <span class="tag tag-glow btn-sm">流水分析</span>
+                <span class="tag tag-glow btn-sm">图谱挖掘</span>
+              </div>
+            </div>
+
+            <div class="bento-card card-amber reveal delay-100">
+              <div class="card-icon">💰</div>
+              <h3 class="card-title">财富管理与零售金融</h3>
+              <p class="card-description">主导存款、理财平台从0到1建设，精通出入金与各类核心交易链路。曾主导头部支付巨头生态应用创新，持续推动营销产品与增长变现。</p>
+              <div class="skill-tags">
+                <span class="tag tag-amber btn-sm">完整交易链路</span>
+                <span class="tag tag-amber btn-sm">零售理财/存款</span>
+                <span class="tag tag-amber btn-sm">支付生态应用</span>
+                <span class="tag tag-amber btn-sm">日常营销产品</span>
+              </div>
+            </div>
+
+            <div class="bento-card card-cyan reveal delay-200">
+              <div class="card-icon">📈</div>
+              <h3 class="card-title">增长运营与智能营销</h3>
+              <p class="card-description">打通 ToB/ToC 全域数据，建立精准用户画像与漏斗模型。运用 A/B 测试驱动迭代，并通过大模型/智能体技术实现商业变现的自动倍增。</p>
+              <div class="skill-tags">
+                <span class="tag tag-cyan btn-sm">画像指标系统</span>
+                <span class="tag tag-cyan btn-sm">A/B测试</span>
+                <span class="tag tag-cyan btn-sm">AI营销转化</span>
+              </div>
+            </div>
+
+            <div class="bento-card card-violet reveal delay-300">
+              <div class="card-icon">🔄</div>
+              <h3 class="card-title">全生命周期管理与商业闭环</h3>
+              <p class="card-description">具备业务从0到1开拓与体系化推演能力。熟练操盘从市场洞察、项目集群推进到 AARRR 增长闭环的完整生命周期，确保战略落为营收。</p>
+              <div class="skill-tags">
+                <span class="tag tag-glow btn-sm">商业模式设计</span>
+                <span class="tag tag-glow btn-sm">产品体系化构建</span>
+                <span class="tag tag-glow btn-sm">增长飞轮引擎</span>
+                <span class="tag tag-glow btn-sm">数据驱动复盘</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- 技术实践：全通栏对分混排 (Pane 2) -->
+        <div class="skills-pane" id="pane-tools">
+          <div class="bento-grid bento-grid-2">
+
+            <div class="bento-card card-purple reveal delay-300" style="grid-column: 1 / -1;">
+              <div class="card-icon">🤖</div>
+              <h3 class="card-title">AI 深度应用与工程化</h3>
+              <p class="card-description">重度探索与实践前沿 AI 产品形态。掌握 Ollama 本地模型私有化部署，熟练应用 Dify /
+                Coze 编排复杂的智能体流程；跟进部署最新开源 Agent（如 OpenCoder/OpenClaw 等）。将 AI 无缝融入日常：运用 Antigravity、Cursor 的 Vibe Coding
+                建站并实现产品原型的极速全栈验证。</p>
+              <div class="skill-tags">
+                <span class="tag tag-purple btn-sm">Ollama私有部署</span>
+                <span class="tag tag-purple btn-sm">Dify/Coze工作流</span>
+                <span class="tag tag-purple btn-sm">开源Agent实践</span>
+                <span class="tag tag-purple btn-sm">Vibe Coding</span>
+              </div>
+            </div>
+
+            <div class="bento-card card-emerald reveal delay-400">
+              <div class="card-icon">💻</div>
+              <h3 class="card-title">敏捷全栈与体验架构</h3>
+              <p class="card-description">精通系统架构解构与前后端 API 契约设计，能无障碍与研发团队深频。同时具备同理心设计能力，能直接定义企业级交互原型规范并落地高保真 UI/UX。</p>
+              <div class="skill-tags">
+                <span class="tag tag-emerald btn-sm">研发架构解构</span>
+                <span class="tag tag-emerald btn-sm">敏捷协作流</span>
+                <span class="tag tag-emerald btn-sm">高保真交互</span>
+                <span class="tag tag-emerald btn-sm">设计规范体系</span>
+              </div>
+            </div>
+
+            <div class="bento-card card-blue reveal delay-500">
+              <div class="card-icon">🧠</div>
+              <h3 class="card-title">数据治理与工程化沉淀</h3>
+              <p class="card-description">善建全链路数据血缘及监控看板。熟练运用 SQL 与 BI 探明沉默价值，从而反哺产品迭代与增长策略，构筑业务的数据护城河。</p>
+              <div class="skill-tags">
+                <span class="tag tag-blue btn-sm">指标看板搭建</span>
+                <span class="tag tag-blue btn-sm">BI 可视化分析</span>
+                <span class="tag tag-blue btn-sm">SQL 探针</span>
+                <span class="tag tag-blue btn-sm">业务数据挖掘</span>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div><!-- skills-panes-wrapper -->
   </section>
 
   <!-- ============================
