--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="朱天胜 - 资深AI+金融科技产品经理，14年行业经验，深耕大模型应用与金融产品创新">
   <meta name="keywords" content="产品经理,AI,金融科技,LLM,Agent,智能营销">
   <title>朱天胜 · AI+FinTech Product Architect</title>
-  <link rel="icon" type="image/svg+xml" href="images/logo.svg">
-  <link rel="apple-touch-icon" href="images/logo.svg">
+  <link rel="icon" type="image/svg+xml" href="images/logo_neo.png">
+  <link rel="apple-touch-icon" href="images/logo_neo.png">
 
   <!-- 字体 -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,7 +42,7 @@
   <nav class="navbar" id="navbar">
     <div class="container flex-between">
       <a href="#hero" class="nav-logo">
-        <img src="images/logo.svg" alt="Erick Zhu" class="logo-icon">
+        <img src="images/logo_neo.png" alt="Erick Zhu" class="logo-icon">
         <span>ERICK ZHU</span>
       </a>
 
@@ -730,7 +730,7 @@
       <div class="footer-content">
         <div class="footer-brand">
           <span class="nav-logo">
-            <img src="images/logo.svg" alt="Erick Zhu" class="logo-icon">
+            <img src="images/logo_neo.png" alt="Erick Zhu" class="logo-icon">
             <span>ERICK ZHU</span>
           </span>
           <p class="footer-tagline">AI+FinTech Product Architect</p>
