--- a/blog.html
+++ b/blog.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="朱天胜的博客 - AI、产品思维与工程实践">
     <title>博客 · Erick Zhu</title>
-    <link rel="icon" type="image/svg+xml" href="images/logo.svg">
-    <link rel="apple-touch-icon" href="images/logo.svg">
+    <link rel="icon" type="image/svg+xml" href="images/logo_neo.png">
+    <link rel="apple-touch-icon" href="images/logo_neo.png">
 
     <!-- 字体 -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,7 +37,7 @@
     <nav class="navbar scrolled" id="navbar">
         <div class="container flex-between">
             <a href="index.html" class="nav-logo">
-                <img src="images/logo.svg" alt="Erick Zhu" class="logo-icon">
+                <img src="images/logo_neo.png" alt="Erick Zhu" class="logo-icon">
                 <span>ERICK ZHU</span>
             </a>
 
@@ -79,7 +79,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <span class="nav-logo">
-                        <img src="images/logo.svg" alt="Erick Zhu" class="logo-icon">
+                        <img src="images/logo_neo.png" alt="Erick Zhu" class="logo-icon">
                         <span>ERICK ZHU</span>
                     </span>
                     <p class="footer-tagline">AI+FinTech Product Architect</p>
